# vix-ffi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vix.json
.github/workflows/: ci.yml
cmake/: VixFFI.cmake
docs/: PYTHON.md  SPEC.md  VERSIONING.md
examples/base64_ffi/: CMakeLists.txt  bindings.json
examples/base64_ffi/include/base64/: base64_ffi.h
examples/base64_ffi/python/base64/: _native.py  api.py
examples/base64_ffi/src/: base64_ffi.cpp
include/vix/ffi/: vix_ffi.h  vix_ffi_config.h  vix_ffi_export.h  vix_ffi_memory.h  vix_ffi_status.h  vix_ffi_types.h
templates/lib_ffi/: CMakeLists.txt  vix.json
templates/lib_ffi/include/__pkg__/: __pkg___ffi.h
templates/lib_ffi/src/: __pkg___ffi.cpp
templates/python/__pkg__/: _native.py  api.py
tests/: test_abi_sizes.cpp  test_status.cpp
tools/: abi_check.py  gen_python_ctypes.py  gen_python_package.py
